crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__numeric-literal-too-long_PYI054.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI054 [*] Numeric literals with a string representation longer than ten characters are not permitted
 --> PYI054.pyi:2:16
  |
1 | field01: int = 0xFFFFFFFF
2 | field02: int = 0xFFFFFFFFF  # Error: PYI054
  |                ^^^^^^^^^^^
3 | field03: int = -0xFFFFFFFF
4 | field04: int = -0xFFFFFFFFF  # Error: PYI054
  |
help: Replace with `...`
  |
1 | field01: int = 0xFFFFFFFF
  - field02: int = 0xFFFFFFFFF  # Error: PYI054
2 + field02: int = ...  # Error: PYI054
3 | field03: int = -0xFFFFFFFF
  |

PYI054 [*] Numeric literals with a string representation longer than ten characters are not permitted
 --> PYI054.pyi:4:17
  |
2 | field02: int = 0xFFFFFFFFF  # Error: PYI054
3 | field03: int = -0xFFFFFFFF
4 | field04: int = -0xFFFFFFFFF  # Error: PYI054
  |                 ^^^^^^^^^^^
5 |
6 | field05: int = 1234567890
  |
help: Replace with `...`
  |
3 | field03: int = -0xFFFFFFFF
  - field04: int = -0xFFFFFFFFF  # Error: PYI054
4 + field04: int = -...  # Error: PYI054
5 |
  |

PYI054 [*] Numeric literals with a string representation longer than ten characters are not permitted
  --> PYI054.pyi:8:16
   |
 6 | field05: int = 1234567890
 7 | field06: int = 12_456_890
 8 | field07: int = 12345678901  # Error: PYI054
   |                ^^^^^^^^^^^
 9 | field08: int = -1234567801
10 | field09: int = -234_567_890  # Error: PYI054
   |
help: Replace with `...`
  |
7 | field06: int = 12_456_890
  - field07: int = 12345678901  # Error: PYI054
8 + field07: int = ...  # Error: PYI054
9 | field08: int = -1234567801
  |

PYI054 [*] Numeric literals with a string representation longer than ten characters are not permitted
  --> PYI054.pyi:10:17
   |
 8 | field07: int = 12345678901  # Error: PYI054
 9 | field08: int = -1234567801
10 | field09: int = -234_567_890  # Error: PYI054
   |                 ^^^^^^^^^^^
11 |
12 | field10: float = 123.456789
   |
help: Replace with `...`
   |
9  | field08: int = -1234567801
   - field09: int = -234_567_890  # Error: PYI054
10 + field09: int = -...  # Error: PYI054
11 |
   |

PYI054 [*] Numeric literals with a string representation longer than ten characters are not permitted
  --> PYI054.pyi:13:18
   |
12 | field10: float = 123.456789
13 | field11: float = 123.4567890  # Error: PYI054
   |                  ^^^^^^^^^^^
14 | field12: float = -123.456789
15 | field13: float = -123.567_890  # Error: PYI054
   |
help: Replace with `...`
   |
12 | field10: float = 123.456789
   - field11: float = 123.4567890  # Error: PYI054
13 + field11: float = ...  # Error: PYI054
14 | field12: float = -123.456789
   |

PYI054 [*] Numeric literals with a string representation longer than ten characters are not permitted
  --> PYI054.pyi:15:19
   |
13 | field11: float = 123.4567890  # Error: PYI054
14 | field12: float = -123.456789
15 | field13: float = -123.567_890  # Error: PYI054
   |                   ^^^^^^^^^^^
16 |
17 | field14: complex = 1e1234567j
   |
help: Replace with `...`
   |
14 | field12: float = -123.456789
   - field13: float = -123.567_890  # Error: PYI054
15 + field13: float = -...  # Error: PYI054
16 |
   |

PYI054 [*] Numeric literals with a string representation longer than ten characters are not permitted
  --> PYI054.pyi:18:20
   |
17 | field14: complex = 1e1234567j
18 | field15: complex = 1e12345678j  # Error: PYI054
   |                    ^^^^^^^^^^^
19 | field16: complex = -1e1234567j
20 | field17: complex = 1e123456789j  # Error: PYI054
   |
help: Replace with `...`
   |
17 | field14: complex = 1e1234567j
   - field15: complex = 1e12345678j  # Error: PYI054
18 + field15: complex = ...  # Error: PYI054
19 | field16: complex = -1e1234567j
   |

PYI054 [*] Numeric literals with a string representation longer than ten characters are not permitted
  --> PYI054.pyi:20:20
   |
18 | field15: complex = 1e12345678j  # Error: PYI054
19 | field16: complex = -1e1234567j
20 | field17: complex = 1e123456789j  # Error: PYI054
   |                    ^^^^^^^^^^^^
help: Replace with `...`
   |
19 | field16: complex = -1e1234567j
   - field17: complex = 1e123456789j  # Error: PYI054
20 + field17: complex = ...  # Error: PYI054
   |
