crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__preview_PYI019_PYI019_1.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI019_1.pyi:4:26: PYI019 [*] Use `Self` instead of custom TypeVar `S`
  |
3 | class F:
4 |     def m[S](self: S) -> S: ...
  |                          ^ PYI019
  |
  = help: Replace TypeVar `S` with `Self`

ℹ Safe fix
1 1 | import typing
2 2 | 
3 3 | class F:
4   |-    def m[S](self: S) -> S: ...
  4 |+    def m(self) -> typing.Self: ...
